Mon Jan  5 18:58:47 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* dir.c: merge tuning from H.Yamamoto <ocean@m2.ccsnet.ne.jp>.
	  [ruby-dev:22486]

	* pack.c (pack_unpack): unpack requires big endian offet (OFF16B
	  and OFF32B).  The patch is from Minero Aoki in [ruby-dev:22489]

	* pack.c (OFF16B): add big-endian offset again. 

Mon Jan  5 03:00:53 2004  Minero Aoki  <aamine@loveruby.net>

	* test/ruby/test_pack.rb: new test test_unpack_N.

Mon Jan  5 01:47:53 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): remove duplicated object files
	  from $objs on DOSISH platforms.

Sat Jan  3 02:44:48 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* rubysig.h (TRAP_END): preserve errno before switching context.
	  [ruby-core:02137]

Sat Jan  3 01:18:08 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* dir.c: merge tuning from H.Yamamoto <ocean@m2.ccsnet.ne.jp>.
	  [ruby-dev:22476]

Fri Jan  2 14:54:11 2004  Dave Thomas  <dave@pragprog.com>
	
	* bin/ri: Add new --classes option, and arrange for
	  help messages to be paged too.

	* bin/rdoc: Add statistics.

	* process.c: (MG) Added Process documentation

	* lib/rdoc/ri/ri_formatter.rb (RI::AttributeFormatter::wrap): 
	  Fix problem with labels not displaying in RI labeled
	  lists using BS and ANSI modes.

Fri Jan  2 01:50:13 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_eof): ARGF.eof? should not have any side effect.
	  [ruby-dev:22469]

Thu Jan  1 09:03:20 2004  Dave Thomas  <dave@pragprog.com>

	* bin/ri (report_class_stuff): Fix problem with ambiguous nested
	  classes not matching.

Wed Dec 31 17:25:17 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_each_byte): should return self.  [ruby-dev:22465]

Wed Dec 31 15:05:00 2003  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/pathname.rb: Corrected small coding error.

Wed Dec 31 15:00:00 2003  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/pathname.rb: Completed documentation.
